[UPDATE] added use cases and observers and some more drawables, strings and depenedecies

--- a/LibraryModule/src/main/res/values/strings.xml
+++ b/LibraryModule/src/main/res/values/strings.xml
@@ -28,4 +28,6 @@
     <string name="merken">Merken</string>
     <string name="teilen">Teilen</string>
     <string name="app_empfehlen">App empfehlen</string>
+    <string name="siehe_auch">Siehe auch:</string>
+    <string name="home">Home</string>
 </resources>
