[UPDATE] more drawables and scrollbar

--- a/LibraryModule/src/main/res/values/strings.xml
+++ b/LibraryModule/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="lexika_CAPS">LEXIKA</string>
     <string name="lexikon">Lexikon</string>
     <string name="lexikon_CAPS">LEXIKON</string>
+    <string name="gemerkt">Gemerkt</string>
+    <string name="gemerkt_CAPS">GEMERKT</string>
     <string name="suche">Suche</string>
     <string name="suche_CAPS">SUCHE</string>
     <string name="impressum">Impressum</string>
