--- a/LibraryModule/src/main/res/values/strings.xml
+++ b/LibraryModule/src/main/res/values/strings.xml
@@ -35,7 +35,7 @@
     <string name="no_search_results">Die Suche hat leider keine Ergebnisse ergeben&#8230;</string>
     <string name="no_internet_connection">Keine Internetverbindung</string>
     <string name="no_internet_connection_standard_message">Du bist nicht mit dem Internet verbunden. Bitte verbinde dich mit dem Internet um fortzufahren.</string>
-    <string name="ok">Ok</string>
+    <string name="ok">OK</string>
     <string name="timeout">Timeout</string>
     <string name="timeout_message">Leider gab es bei der Anfrage eine Zeitüberschreitung. Deine Verbindung ist wahrscheinlich zu langsam.</string>
     <string name="hoppla">Hoppla</string>
