[UPDATE] updated 'suche' search hint with an leading white space

--- a/LibraryModule/src/main/res/values/strings.xml
+++ b/LibraryModule/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="lexikon_CAPS">LEXIKON</string>
     <string name="gemerkt">Gemerkt</string>
     <string name="gemerkt_CAPS">GEMERKT</string>
-    <string name="suche">Suche</string>
+    <string name="suche">\u0020Suche</string>
     <string name="suche_CAPS">SUCHE</string>
     <string name="impressum">Impressum</string>
     <string name="impressum_CAPS">IMPRESSUM</string>
