[ADD] added date to impressum string

--- a/LibraryModule/src/main/res/values/strings.xml
+++ b/LibraryModule/src/main/res/values/strings.xml
@@ -29,7 +29,7 @@
     <string name="datenschutzerklaerung">Datenschutzerklärung</string>
     <string name="datenschutzerklaerung_text">Die Nutzung der App ist kostenfrei und ohne Angabe personenbezogener oder ortsbezogener Daten möglich. Es werden werder Daten innerhalb der Anwendung gespeichert noch Daten an Dritte weitergegeben.</string>
     <string name="datenschutzerklaerung_fragen">Wenn Sie Fragen haben, die diese Datenschutzerklärung nicht beantworten konnte, wenn Sie zu einem Punkt weitere Informationen haben möchten oder Anregungen oder Kommentare haben, können Sie sich gern direkt per E-Mail an die Datenschutzbeauftragte der Bundeszentrale für politische Bildung wenden: diehl@bpb.de.</string>
-    <string name="datenschutzerklaerung_datum">Bonn, den xx.xx.2018</string>
+    <string name="datenschutzerklaerung_datum">Bonn, den 01.05.2018</string>
 
     <string name="zurueck">zurück</string>
     <string name="navigation">Navigation</string>
